force-app/main/default/objects/Email_Category_Map__c/Email_Category_Map__c.object-meta.xml
<CustomObject>
    <label>Email Category Map</label>
    <nameField>
        <displayFormat>EC-{0000}</displayFormat>
        <label>Email Category Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Category Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>