force-app/main/default/objects/Email_Category_Map__c/fields/EmailToCase_Address__c.field-meta.xml
<CustomField>
    <fullName>EmailToCase_Address__c</fullName>
    <label>EmailToCase Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>