force-app/main/default/objects/Email_Category_Map__c/fields/No_Notifications__c.field-meta.xml
<CustomField>
    <fullName>No_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Notifications</label>
    <type>Checkbox</type>
</CustomField>