force-app/main/default/objects/Email_Category_Map__c/fields/Org_Email__c.field-meta.xml
<CustomField>
    <fullName>Org_Email__c</fullName>
    <label>Org Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>