force-app/main/default/objects/Email_Category_Map__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Org_Email__c</columns>
    <columns>Service__c</columns>
    <columns>Category__c</columns>
    <columns>Subcategory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>