force-app/main/default/objects/Email_Category_Map__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>No_Notifications__c</columns>
    <columns>Org_Email__c</columns>
    <columns>EmailToCase_Address__c</columns>
    <columns>Service__c</columns>
    <columns>Category__c</columns>
    <columns>Subcategory__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>